💄 Fix kbd alignment on safari

--- a/src/components/GitmojiList/Toolbar/styles.module.css
+++ b/src/components/GitmojiList/Toolbar/styles.module.css
@@ -34,7 +34,7 @@
   color: #b8b8b8;
   display: flex;
   font-family: system-ui;
-  margin: 0.5rem;
+  margin: 0 0.5rem;
   padding: 0.25rem 0.5rem;
 }
 
